@@ -1960,6 +1960,13 @@ Call COMMAND for all threads in ascending order.\n\
 The default is descending order."),
 };
 
+static const gdb::option::flag_option_def<> unavailable_option_def = {
+  "unavailable",
+  N_("\
+Call COMMAND also for all unavailable threads.\n\
+The default is to not enumerate unavailable threads."),
+};
+
 /* The qcs command line flags for the "thread apply" commands.  Keep
    this in sync with the "frame apply" commands.  */
 
@@ -1986,23 +1993,28 @@ static const gdb::option::option_def thr_qcs_flags_option_defs[] = {
 /* Create an option_def_group for the "thread apply all" options, with
    ASCENDING and FLAGS as context.  */
 
-static inline std::array<gdb::option::option_def_group, 2>
+static inline std::array<gdb::option::option_def_group, 3>
 make_thread_apply_all_options_def_group (bool *ascending,
+					 bool *unavailable,
 					 qcs_flags *flags)
 {
   return {{
     { {ascending_option_def.def ()}, ascending},
-    { {thr_qcs_flags_option_defs}, flags },
+    { {unavailable_option_def.def ()}, unavailable},
+    { {thr_qcs_flags_option_defs}, flags},
   }};
 }
 
 /* Create an option_def_group for the "thread apply" options, with
    FLAGS as context.  */
 
-static inline gdb::option::option_def_group
-make_thread_apply_options_def_group (qcs_flags *flags)
+static inline std::array<gdb::option::option_def_group, 2>
+make_thread_apply_options_def_group (bool *unavailable, qcs_flags *flags)
 {
-  return {{thr_qcs_flags_option_defs}, flags};
+  return {{
+    { {unavailable_option_def.def ()}, unavailable},
+    { {thr_qcs_flags_option_defs}, flags},
+  }};
 }
 
 /* Apply a GDB command to a list of threads and SIMD lanes.  List syntax
@@ -2036,9 +2048,11 @@ thread_apply_all_command_1 (const char *cmd, int from_tty,
 			    simd_lane_kind lane_kind)
 {
   bool ascending = false;
+  bool unavailable = false;
   qcs_flags flags;
 
   auto group = make_thread_apply_all_options_def_group (&ascending,
+							&unavailable,
 							&flags);
   gdb::option::process_options
     (&cmd, gdb::option::PROCESS_OPTIONS_UNKNOWN_IS_OPERAND, group);
@@ -2088,7 +2102,8 @@ thread_apply_all_command_1 (const char *cmd, int from_tty,
 	{
 	  thread_info *tp = saved.tp.get ();
 
-	  if (!switch_to_thread_if_alive (tp))
+	  if ((!unavailable && tp->is_unavailable ())
+	       || !switch_to_thread_if_alive (tp))
 	    continue;
 
 	  scoped_restore_current_simd_lane restore_simd_lane {tp};
@@ -2185,7 +2200,7 @@ thread_apply_command_completer (cmd_list_element *ignore,
   tracker.advance_custom_word_point_by (cmd - text);
   text = cmd;
 
-  const auto group = make_thread_apply_options_def_group (nullptr);
+  const auto group = make_thread_apply_options_def_group (nullptr, nullptr);
   if (gdb::option::complete_options
       (tracker, &text, gdb::option::PROCESS_OPTIONS_UNKNOWN_IS_OPERAND, group))
     return;
@@ -2201,6 +2216,7 @@ thread_apply_all_command_completer (cmd_list_element *ignore,
 				    const char *text, const char *word)
 {
   const auto group = make_thread_apply_all_options_def_group (nullptr,
+							      nullptr,
 							      nullptr);
   if (gdb::option::complete_options
       (tracker, &text, gdb::option::PROCESS_OPTIONS_UNKNOWN_IS_OPERAND, group))
@@ -2233,6 +2249,7 @@ thread_apply_command (const char *tidlist, int from_tty)
 {
   qcs_flags flags;
   const char *cmd = NULL;
+  bool unavailable;
 
   if (inferior_ptid == null_ptid)
     error (_("The program is not being run."));
@@ -2252,7 +2269,7 @@ thread_apply_command (const char *tidlist, int from_tty)
 
   cmd = parser.cur_tok ();
 
-  auto group = make_thread_apply_options_def_group (&flags);
+  auto group = make_thread_apply_options_def_group (&unavailable, &flags);
   gdb::option::process_options
     (&cmd, gdb::option::PROCESS_OPTIONS_UNKNOWN_IS_OPERAND, group);
 
@@ -2322,6 +2339,12 @@ thread_apply_command (const char *tidlist, int from_tty)
 	    warning (_("Unknown thread %d.%d"), inf_num, thr_num);
 	  else
 	    warning (_("Unknown thread %d"), thr_num);
+	  continue;
+	}
+
+      if (!unavailable && tp->is_unavailable ())
+	{
+	  warning (_("Thread %s is unavailable."), print_thread_id (tp));
 	  continue;
 	}
 
@@ -3036,7 +3059,8 @@ aborts \"thread apply\".\n\
 Options:\n\
 %OPTIONS%"
 
-  const auto thread_apply_opts = make_thread_apply_options_def_group (nullptr);
+  const auto thread_apply_opts = make_thread_apply_options_def_group (nullptr,
+								      nullptr);
 
   static std::string thread_apply_help = gdb::option::build_help (_("\
 Apply a command to a list of threads.\n\
@@ -3054,7 +3078,7 @@ THREAD_APPLY_OPTION_HELP),
   set_cmd_completer_handle_brkchars (c, thread_apply_command_completer);
 
   const auto thread_apply_all_opts
-    = make_thread_apply_all_options_def_group (nullptr, nullptr);
+    = make_thread_apply_all_options_def_group (nullptr, nullptr, nullptr);
 
   static std::string thread_apply_all_help = gdb::option::build_help (_("\
 Apply a command to all threads.\n\
